fixed bg color on filter so text is more visible

--- a/css/test-style.css
+++ b/css/test-style.css
@@ -13,4 +13,5 @@
 .test-filter {
   height:100vh;
   max-height: 100vh;
+  background-color: #0000008f !important;
 }
